# qt_code

./: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  environment_loads.cpp  environment_loads.h  main.cpp
data/semi_data/: current_data.csv  wind_data.csv
